# DirectX12GameEngine

./: .gitignore  Assets link.txt  CMakeLists.txt  PleaseUseMeToGenerateProjectFiles.bat  imgui.ini
DX12Lib/: DX12Lib.aps
DX12Lib/inc/dx12lib/: Adapter.h  Buffer.h  ByteAddressBuffer.h  CommandList.h  CommandQueue.h  ConstantBuffer.h  ConstantBufferView.h  DescriptorAllocation.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  Device.h  DynamicDescriptorHeap.h  GUI.h  GenerateMipsPSO.h  Helpers.h  IndexBuffer.h  Material.h  Mesh.h  PanoToCubemapPSO.h  PipelineStateObject.h  RenderTarget.h  Resource.h  ResourceStateTracker.h  RootSignature.h  Scene.h  SceneNode.h  ShaderResourceView.h  StructuredBuffer.h  SwapChain.h  Texture.h  ThreadSafeQueue.h  UnorderedAccessView.h  UploadBuffer.h  VertexBuffer.h  VertexTypes.h  Visitor.h  d3dx12.h
DX12Lib/src/: Adapter.cpp  Buffer.cpp  ByteAddressBuffer.cpp  CommandList.cpp  CommandQueue.cpp  ConstantBuffer.cpp  ConstantBufferView.cpp  DX12LibPCH.h  DescriptorAllocation.cpp  DescriptorAllocator.cpp  DescriptorAllocatorPage.cpp  Device.cpp  DynamicDescriptorHeap.cpp  GUI.cpp  GenerateMipsPSO.cpp  IndexBuffer.cpp  Material.cpp  Mesh.cpp  PanoToCubemapPSO.cpp  PipelineStateObject.cpp  RenderTarget.cpp  Resource.cpp  ResourceStateTracker.cpp  RootSignature.cpp  Scene.cpp  SceneNode.cpp  ShaderResourceView.cpp  StructuredBuffer.cpp  SwapChain.cpp  Texture.cpp  UnorderedAccessView.cpp  UploadBuffer.cpp  VertexBuffer.cpp  VertexTypes.cpp
Data/Shaders/DirectX12EngineHDRSample/: HDR_PS.cso  HDR_VS.cso  HDRtoSDR_PS.cso  HDRtoSDR_VS.cso  Skybox_PS.cso  Skybox_VS.cso  Unlit_PS.cso
Data/Shaders/DirectX12EngineModels/: Basic_VS.cso  Decal_PS.cso  Lighting_PS.cso  (+1 more)
GameFramework/: GameFramework.aps
GameFramework/src/: GameFrameworkPCH.h  ReadDirectoryChanges.cpp  ReadDirectoryChangesPrivate.cpp  ReadDirectoryChangesPrivate.h
logs/: log.1.txt  log.2.txt  log.3.txt  log.txt
samples/DirectX12EngineHDRSample/: CMakeLists.txt
samples/DirectX12EngineHDRSample/inc/: Camera.h  DirectX12HDR.h  Light.h  SceneVisitor.h
samples/DirectX12EngineHDRSample/src/: DirectX12HDR.cpp  SceneVisitor.cpp  main.cpp
samples/DirectX12EngineModels/: CMakeLists.txt
(+1785 files in other folders)
